# KubernetesMisconfigurationAuditor

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
tests/: conftest.py  test_auditor.py
