[project]
name = "kubernetes-misconfiguration-auditor"
version = "0.1.0"
description = "CLI tool that connects to Kubernetes cluster and audits workloads for common misconfigurations, improving cluster stability and efficiency"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kubernetes>=35.0.0",
    "logging>=0.4.9.6",
    "pick>=2.6.0",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
